# avl-tutorials

./: README.md  pyproject.toml
doc/ppt/: Setup.pptx  Tutorials.pptx
tutorials/advanced/t1_simple_fifo/: README.md
tutorials/advanced/t1_simple_fifo/exercise/: Makefile
tutorials/advanced/t1_simple_fifo/exercise/cocotb/: simple_fifo_tb.py
tutorials/advanced/t1_simple_fifo/exercise/rtl/: simple_fifo.sv
tutorials/advanced/t1_simple_fifo/solution/cocotb/: simple_fifo_tb.py
tutorials/advanced/t1_simple_fifo/solution/rtl/: simple_fifo.sv
tutorials/advanced/t2_simple_alu/: README.md
tutorials/advanced/t2_simple_alu/exercise/: Makefile
tutorials/advanced/t2_simple_alu/solution/: Makefile
tutorials/simple/t1_clocks_and_reset/: README.md
tutorials/simple/t3_structs/: README.md
tutorials/simple/t5_simple_sequence/: README.md
tutorials/t1_clocks_and_reset/exercise/cocotb/: tutorial.py
tutorials/t1_clocks_and_reset/solution/cocotb/: tutorial.py
tutorials/t1_clocks_and_reset/solution/rtl/: hdl.sv
tutorials/t2_logic_variables/: README.md
tutorials/t2_logic_variables/exercise/rtl/: hdl.sv
tutorials/t3_structs/: README.md
tutorials/t3_structs/exercise/cocotb/: tutorial.py
tutorials/t3_structs/exercise/rtl/: hdl.sv
tutorials/t4_logs/: README.md
tutorials/t4_logs/exercise/: Makefile
tutorials/t4_logs/exercise/cocotb/: tutorial.py
tutorials/t4_logs/solution/cocotb/: tutorial.py
tutorials/t5_simple_sequence/: README.md
tutorials/t5_simple_sequence/solution/cocotb/: tutorial.py
tutorials/t5_simple_sequence/solution/rtl/: hdl.sv
(+11 files in other folders)
